--- a/app/assets/stylesheets/theme/_hamburger.scss
+++ b/app/assets/stylesheets/theme/_hamburger.scss
@@ -1,10 +1,5 @@
 .hamburger-wrapper {
     .bar1, .bar2, .bar3 {
-        background-color: #333;
+        background-color: white;
     }
-    // &.is-open .bar1,
-    // &.is-open .bar2,
-    // &.is-open .bar3  {
-    //     background-color: white;
-    // }
 }
