--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,18 +1,19 @@
 <% provide(:title, "Home") %>
 <div class="full-image-cover full-image-cover-home">
-    <div class="container container-centered">
+    <div class="container container-centered container-vertical">
       <%= image_tag "BLACKSBURG_DEVS_COMMUNITY.svg", class:"main-header-image" %>
+			<%= image_tag "LOGO_WHITE.svg", class:"main-logo" %>
     </div>
 
-    <div class="container container-centered">
+    <!-- <div class="container container-centered">
       <%= image_tag "LOGO_WHITE.svg", class:"main-logo" %>
-    </div>
+    </div> -->
 
 </div>
 <div class="banner" style="margin-top: -80px; color: white; background-color: #333; text-align: center;">
     <h2>A <mark class="red">small</mark> community can make a <mark class="red">big</mark> difference</h2>
 </div>
-<div class="container container-vertical accent-bg" style="height: 89vh">
+<div class="container container-vertical accent-bg">
     <h1 class="huge">We are here to</h1>
     <div class="container container-vertical container-condensed container-space-around">
         <p style="margin:20px;" class="info-text">keep you up to date on all things happening that might be of interest to a guy or gal that loves creating amazing things with software.</p>
@@ -22,9 +23,9 @@
 <div class="full-image-cover full-image-cover-sub">
 
 </div>
-<div class="container container-centered-vertically container-space-around" style="background-color: white; margin: 0 auto; width: 80vw;  padding: 40px 40px 20px;">
+<div class="container container-centered-vertically container-space-around white-bg">
     <h1 class="uppercase">Virginia is for lovers</h1>
-    <svg style="width: 60%;" width="100%" height="100%" viewBox="0 0 4034 1852" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:1.41421;">
+    <svg style="width: 50%;" width="100%" height="100%" viewBox="0 0 4034 1852" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:1.41421;">
         <g transform="matrix(4.16667,0,0,4.16667,-2483.05,-5789.63)">
             <g transform="matrix(9.70074,0,0,9.70074,594.963,1126.62)">
                 <circle cx="66.2" cy="28.4" r="1.3" style="fill:rgb(222,48,47);"/>
