--- a/app/assets/stylesheets/module/_card.scss
+++ b/app/assets/stylesheets/module/_card.scss
@@ -15,7 +15,7 @@
 }
 
 .card-back {
-	background-color: $accentColor;
+	background-color: white;
   position: absolute;
   height: 100%;
   width: 100%;
@@ -82,4 +82,24 @@
 	font-size: .9em;
 	text-align: right;
 	width: 100px;
+}
+
+button {
+	align-self:center;
+  background:transparent;
+	// border:dashed 2px $accentColor;
+	border: 8px solid $accentColor;
+  padding:1rem 1rem;
+  margin:0 1rem;
+  transition:all .5s ease;
+  color: white;
+  font-size:2rem;
+  letter-spacing:1px;
+  outline:none;
+  box-shadow: 20px 38px 34px -26px hsla(0,0%,0%,.2);
+  // border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
+	&:hover{
+     box-shadow:2px 8px 4px -6px hsla(0,0%,0%,.3);
+		 cursor: pointer;
+  }
 }
