--- a/app/views/devs/index.html.erb
+++ b/app/views/devs/index.html.erb
@@ -5,7 +5,23 @@
 <div class="container">
 	<div class="card">
 		<div class="card-back">
-
+			<div class="container container-vertical">
+				<div class="">
+					Kevin Poston
+				</div>
+				<div style="align-self: flex-start">
+					Qualtrax
+				</div>
+				<div style="align-self: flex-start">
+					Twitter
+				</div>
+				<div style="align-self: flex-start">
+					GitHub
+				</div>
+				<div style="align-self: flex-start">
+					Site
+				</div>
+			</div>
 		</div>
 		<div class="card-image">
 			<img src="https://secure.gravatar.com/avatar/9c74bc5c30f0727ecf6308d8869cb589?s=310s" alt="">
@@ -26,5 +42,8 @@
 				Software Engineer
 			</div>
 		</div>
+	</div>
+	<div class="container container-centered">
+		<button type="button" name="button">Add Your Beautiful Face</button>
 	</div>
 </div>
